OPTIMUS-36426 export changes from 4c75ea8edc80d8ee4880877acb59365c7612e373